{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 346,
  "lineage": "3b7ca6bb-014c-a3dc-d194-e7ac6c2ce363",
  "resources": [
    {
      "module": "module.hub_firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw_mng_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/publicIPAddresses/dtf-hub-fw-mng-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.16.33.220",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dtf-hub-fw-mng-pip",
            "resource_group_name": "dtf-hub",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CreationDateTime": "2023-07-20T11:37:08.8446511Z",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/publicIPAddresses/dtf-hub-fw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.234.137.138",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dtf-hub-fw-pip",
            "resource_group_name": "dtf-hub",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CreationDateTime": "2023-07-20T11:37:08.8446510Z",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_firewall_policy",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "fw_pl",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/azureFirewalls/dtf-hub-fw"
            ],
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/firewallPolicies/dtf-hub-fw-pl",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "westeurope",
            "name": "dtf-hub-fw-pl",
            "private_ip_ranges": [],
            "resource_group_name": "dtf-hub",
            "rule_collection_groups": [
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/firewallPolicies/dtf-hub-fw-pl/ruleCollectionGroups/network-group",
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/firewallPolicies/dtf-hub-fw-pl/ruleCollectionGroups/application-group"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:19.9900297Z",
              "Environment": "Dev"
            },
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_firewall_policy",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "application_rule_collection_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "application-group",
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "vms-limited-downloads",
                "priority": 300,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "azure.archive.ubuntu.com"
                    ],
                    "destination_urls": [],
                    "name": "azure-ubuntu-archive",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/24",
                      "10.2.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "storage.googleapis.com"
                    ],
                    "destination_urls": [],
                    "name": "google-apis",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "auth.docker.io",
                      "registry-1.docker.io",
                      "index.docker.io",
                      "dseasb33srnrn.cloudfront.net",
                      "production.cloudflare.docker.com"
                    ],
                    "destination_urls": [],
                    "name": "docker",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/24",
                      "10.2.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "work-vm-azure-access",
                "priority": 400,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "login.microsoftonline.com"
                    ],
                    "destination_urls": [],
                    "name": "active-directory",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "management.azure.com"
                    ],
                    "destination_urls": [],
                    "name": "resource-manager-both-vms",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/24",
                      "10.2.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "monitor-vm-azure-access",
                "priority": 500,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "api.loganalytics.io"
                    ],
                    "destination_urls": [],
                    "name": "active-directory",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.2.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "acr-access",
                "priority": 600,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "dtfhubacr.azurecr.io",
                      "dtfhubacr.westeurope.data.azurecr.io"
                    ],
                    "destination_urls": [],
                    "name": "acr-access",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/24",
                      "10.1.2.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "aks-access",
                "priority": 700,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [
                      "AzureKubernetesService"
                    ],
                    "destination_fqdns": [],
                    "destination_urls": [],
                    "name": "aks-fqdn-tags",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.2.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "aks-diagnostics",
                "priority": 800,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "196532a9-0816-479d-a9b1-5907fa82fa85.ods.opinsights.azure.com"
                    ],
                    "destination_urls": [],
                    "name": "monitor-logs",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.2.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "monitor-vm-dns",
                "priority": 900,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "grafana.monitor.net"
                    ],
                    "destination_urls": [],
                    "name": "monitor.net",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "172.0.0.0/16"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/firewallPolicies/dtf-hub-fw-pl",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/firewallPolicies/dtf-hub-fw-pl/ruleCollectionGroups/application-group",
            "name": "application-group",
            "nat_rule_collection": [],
            "network_rule_collection": [],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.monitor",
            "azurerm_resource_group.work",
            "module.hub_firewall_policy.azurerm_firewall_policy.fw_pl",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet",
            "module.monitor_network_security_groups.azurerm_network_security_group.nsg",
            "module.monitor_network_security_groups.azurerm_network_security_rule.rules",
            "module.monitor_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.monitor_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.monitor_route_tables.azurerm_route.routes",
            "module.monitor_route_tables.azurerm_route_table.rt",
            "module.monitor_virtual_network.azurerm_subnet.subnets",
            "module.monitor_virtual_network.azurerm_virtual_network.vnet",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_firewall_policy",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "network_rule_collection_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "network-group",
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/firewallPolicies/dtf-hub-fw-pl",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/firewallPolicies/dtf-hub-fw-pl/ruleCollectionGroups/network-group",
            "name": "network-group",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "vm-access",
                "priority": 1000,
                "rule": [
                  {
                    "destination_addresses": [
                      "10.1.0.0/24",
                      "10.2.0.0/24"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "22"
                    ],
                    "name": "ssh",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "172.0.0.0/16"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_addresses": [
                      "10.2.0.0/24"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "80"
                    ],
                    "name": "grafana-monitor",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "172.0.0.0/16"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.monitor",
            "azurerm_resource_group.work",
            "module.hub_firewall_policy.azurerm_firewall_policy.fw_pl",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet",
            "module.monitor_network_security_groups.azurerm_network_security_group.nsg",
            "module.monitor_network_security_groups.azurerm_network_security_rule.rules",
            "module.monitor_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.monitor_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.monitor_route_tables.azurerm_route.routes",
            "module.monitor_route_tables.azurerm_route_table.rt",
            "module.monitor_virtual_network.azurerm_subnet.subnets",
            "module.monitor_virtual_network.azurerm_virtual_network.vnet",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_network_security_groups[\"hub-ACRSubnet-nsg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/networkSecurityGroups/hub-ACRSubnet-nsg",
            "location": "westeurope",
            "name": "hub-ACRSubnet-nsg",
            "resource_group_name": "dtf-hub",
            "security_rule": [],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:19.9940697Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_route_tables[\"hub-gateway-rt\"]",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "monitor-vnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-gateway-rt/routes/monitor-vnet",
            "name": "monitor-vnet",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-hub",
            "route_table_name": "hub-gateway-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "work-vnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-gateway-rt/routes/work-vnet",
            "name": "work-vnet",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-hub",
            "route_table_name": "hub-gateway-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_route_tables.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.hub_route_tables[\"hub-gateway-rt\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "location": "westeurope",
            "name": "hub-gateway-rt",
            "resource_group_name": "dtf-hub",
            "route": [
              {
                "address_prefix": "10.1.0.0/16",
                "name": "work-vnet",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "monitor-vnet",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/GatewaySubnet"
            ],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:20.1466958Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_route_tables[\"hub-rt\"]",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "monitor-vnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-rt/routes/monitor-vnet",
            "name": "monitor-vnet",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-hub",
            "route_table_name": "hub-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "outbound",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-rt/routes/outbound",
            "name": "outbound",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-hub",
            "route_table_name": "hub-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "work-vnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-rt/routes/work-vnet",
            "name": "work-vnet",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-hub",
            "route_table_name": "hub-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_route_tables.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.hub_route_tables[\"hub-rt\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-rt",
            "location": "westeurope",
            "name": "hub-rt",
            "resource_group_name": "dtf-hub",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "outbound",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "work-vnet",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "monitor-vnet",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/ACRSubnet"
            ],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:20.5279552Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_to_monitor_peerings",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "ingoing_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/virtualNetworkPeerings/dtf-monitor-vnet-to-dtf-hub-vnet",
            "name": "dtf-monitor-vnet-to-dtf-hub-vnet",
            "remote_virtual_network_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet",
            "resource_group_name": "dtf-monitor-spoke",
            "use_remote_gateways": true,
            "virtual_network_name": "dtf-monitor-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.monitor",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_aa_pip",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_default_pip",
            "module.hub_vpn_gateway.azurerm_virtual_network_gateway.vng",
            "module.hub_vpn_gateway.module.aa_pip_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.aa_pip_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_vpn_gateway.module.default_pip_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.default_pip_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_vpn_gateway.module.vng_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.vng_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.monitor_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_to_monitor_peerings",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "outgoing_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/virtualNetworkPeerings/dtf-hub-vnet-to-dtf-monitor-vnet",
            "name": "dtf-hub-vnet-to-dtf-monitor-vnet",
            "remote_virtual_network_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet",
            "resource_group_name": "dtf-hub",
            "use_remote_gateways": false,
            "virtual_network_name": "dtf-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.monitor",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_aa_pip",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_default_pip",
            "module.hub_vpn_gateway.azurerm_virtual_network_gateway.vng",
            "module.hub_vpn_gateway.module.aa_pip_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.aa_pip_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_vpn_gateway.module.default_pip_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.default_pip_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_vpn_gateway.module.vng_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.vng_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.monitor_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_to_work_peerings",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "ingoing_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/virtualNetworkPeerings/dtf-work-vnet-to-dtf-hub-vnet",
            "name": "dtf-work-vnet-to-dtf-hub-vnet",
            "remote_virtual_network_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet",
            "resource_group_name": "dtf-work-spoke",
            "use_remote_gateways": true,
            "virtual_network_name": "dtf-work-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_aa_pip",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_default_pip",
            "module.hub_vpn_gateway.azurerm_virtual_network_gateway.vng",
            "module.hub_vpn_gateway.module.aa_pip_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.aa_pip_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_vpn_gateway.module.default_pip_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.default_pip_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_vpn_gateway.module.vng_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.vng_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_to_work_peerings",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "outgoing_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/virtualNetworkPeerings/dtf-hub-vnet-to-dtf-work-vnet",
            "name": "dtf-hub-vnet-to-dtf-work-vnet",
            "remote_virtual_network_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet",
            "resource_group_name": "dtf-hub",
            "use_remote_gateways": false,
            "virtual_network_name": "dtf-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_aa_pip",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_default_pip",
            "module.hub_vpn_gateway.azurerm_virtual_network_gateway.vng",
            "module.hub_vpn_gateway.module.aa_pip_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.aa_pip_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_vpn_gateway.module.default_pip_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.default_pip_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_vpn_gateway.module.vng_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_vpn_gateway.module.vng_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ACRSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/ACRSubnet",
            "name": "ACRSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-hub",
            "virtual_network_name": "dtf-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "AzureFirewallManagementSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-hub",
            "virtual_network_name": "dtf-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "AzureFirewallSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-hub",
            "virtual_network_name": "dtf-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "GatewaySubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-hub",
            "virtual_network_name": "dtf-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ACRSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/ACRSubnet",
            "network_security_group_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/networkSecurityGroups/hub-ACRSubnet-nsg",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/ACRSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ACRSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/ACRSubnet",
            "route_table_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-rt",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/ACRSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "GatewaySubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/GatewaySubnet",
            "route_table_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/GatewaySubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_virtual_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b1923ce4-a333-4e80-8d32-ffe8e3819d7e",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet",
            "location": "westeurope",
            "name": "dtf-hub-vnet",
            "resource_group_name": "dtf-hub",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/AzureFirewallManagementSubnet",
                "name": "AzureFirewallManagementSubnet"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/ACRSubnet",
                "name": "ACRSubnet",
                "security_group": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/networkSecurityGroups/hub-ACRSubnet-nsg"
              }
            ],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:19.9229639Z",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vpn_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vng_aa_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/publicIPAddresses/dtf-hub-vpn-aa-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.148.216.93",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dtf-hub-vpn-aa-pip",
            "resource_group_name": "dtf-hub",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:19.8127760Z",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vpn_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vng_default_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/publicIPAddresses/dtf-hub-vpn-default-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.148.216.92",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dtf-hub-vpn-default-pip",
            "resource_group_name": "dtf-hub",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:19.8133339Z",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vpn_gateway",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vng",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": true,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.0.4"
                    ],
                    "ip_configuration_name": "default",
                    "tunnel_ip_addresses": [
                      "52.148.216.92"
                    ]
                  },
                  {
                    "default_addresses": [
                      "10.0.0.5"
                    ],
                    "ip_configuration_name": "active-active",
                    "tunnel_ip_addresses": [
                      "52.148.216.93"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworkGateways/dtf-hub-vpn",
            "ip_configuration": [
              {
                "name": "default",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/publicIPAddresses/dtf-hub-vpn-default-pip",
                "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/GatewaySubnet"
              },
              {
                "name": "active-active",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/publicIPAddresses/dtf-hub-vpn-aa-pip",
                "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-hub/providers/Microsoft.Network/virtualNetworks/dtf-hub-vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "westeurope",
            "name": "dtf-hub-vpn",
            "private_ip_address_enabled": false,
            "resource_group_name": "dtf-hub",
            "sku": "VpnGw1",
            "tags": {
              "CreationDateTime": "2023-07-20T07:37:22.6197366Z",
              "Environment": "Dev"
            },
            "type": "Vpn",
            "vpn_client_configuration": [
              {
                "aad_audience": "41b23e61-6c1e-4545-b367-cd054e0ed4b4",
                "aad_issuer": "https://sts.windows.net/c9ad96a7-2bac-49a7-abf6-8e932f60bf2b/",
                "aad_tenant": "https://login.microsoftonline.com/c9ad96a7-2bac-49a7-abf6-8e932f60bf2b/",
                "address_space": [
                  "172.0.0.0/16"
                ],
                "vpn_auth_types": [
                  "AAD"
                ],
                "vpn_client_protocols": [
                  "OpenVPN"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpn_client_configuration"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "aad_issuer"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "vpn_client_configuration"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "aad_tenant"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "vpn_client_configuration"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "radius_server_secret"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.hub",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.hub_network_security_groups.azurerm_network_security_group.nsg",
            "module.hub_network_security_groups.azurerm_network_security_rule.rules",
            "module.hub_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.hub_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.hub_route_tables.azurerm_route.routes",
            "module.hub_route_tables.azurerm_route_table.rt",
            "module.hub_virtual_network.azurerm_subnet.subnets",
            "module.hub_virtual_network.azurerm_virtual_network.vnet",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_aa_pip",
            "module.hub_vpn_gateway.azurerm_public_ip.vng_default_pip"
          ]
        }
      ]
    },
    {
      "module": "module.monitor_network_security_groups[\"monitor-MonitorSubnet-nsg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/networkSecurityGroups/monitor-MonitorSubnet-nsg",
            "location": "westeurope",
            "name": "monitor-MonitorSubnet-nsg",
            "resource_group_name": "dtf-monitor-spoke",
            "security_rule": [],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:25.3563454Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.monitor"
          ]
        }
      ]
    },
    {
      "module": "module.monitor_route_tables[\"monitor-rt\"]",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub-vnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/routeTables/monitor-rt/routes/hub-vnet",
            "name": "hub-vnet",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-monitor-spoke",
            "route_table_name": "monitor-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.monitor",
            "module.monitor_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "outbound",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/routeTables/monitor-rt/routes/outbound",
            "name": "outbound",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-monitor-spoke",
            "route_table_name": "monitor-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.monitor",
            "module.monitor_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "vpn-address-pool-1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.0.0.0/17",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/routeTables/monitor-rt/routes/vpn-address-pool-1",
            "name": "vpn-address-pool-1",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-monitor-spoke",
            "route_table_name": "monitor-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.monitor",
            "module.monitor_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "vpn-address-pool-2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.0.128.0/17",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/routeTables/monitor-rt/routes/vpn-address-pool-2",
            "name": "vpn-address-pool-2",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-monitor-spoke",
            "route_table_name": "monitor-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.monitor",
            "module.monitor_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "work-vnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/routeTables/monitor-rt/routes/work-vnet",
            "name": "work-vnet",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-monitor-spoke",
            "route_table_name": "monitor-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.monitor",
            "module.monitor_route_tables.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.monitor_route_tables[\"monitor-rt\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/routeTables/monitor-rt",
            "location": "westeurope",
            "name": "monitor-rt",
            "resource_group_name": "dtf-monitor-spoke",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "outbound",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.0.0/16",
                "name": "hub-vnet",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "work-vnet",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.0.0.0/17",
                "name": "vpn-address-pool-1",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.0.128.0/17",
                "name": "vpn-address-pool-2",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/subnets/MonitorSubnet"
            ],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:26.0020746Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.monitor"
          ]
        }
      ]
    },
    {
      "module": "module.monitor_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "MonitorSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/subnets/MonitorSubnet",
            "name": "MonitorSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-monitor-spoke",
            "virtual_network_name": "dtf-monitor-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.monitor",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.monitor_network_security_groups.azurerm_network_security_group.nsg",
            "module.monitor_network_security_groups.azurerm_network_security_rule.rules",
            "module.monitor_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.monitor_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.monitor_route_tables.azurerm_route.routes",
            "module.monitor_route_tables.azurerm_route_table.rt",
            "module.monitor_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.monitor_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "MonitorSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/subnets/MonitorSubnet",
            "network_security_group_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/networkSecurityGroups/monitor-MonitorSubnet-nsg",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/subnets/MonitorSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.monitor",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.monitor_network_security_groups.azurerm_network_security_group.nsg",
            "module.monitor_network_security_groups.azurerm_network_security_rule.rules",
            "module.monitor_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.monitor_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.monitor_route_tables.azurerm_route.routes",
            "module.monitor_route_tables.azurerm_route_table.rt",
            "module.monitor_virtual_network.azurerm_subnet.subnets",
            "module.monitor_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.monitor_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "MonitorSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/subnets/MonitorSubnet",
            "route_table_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/routeTables/monitor-rt",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/subnets/MonitorSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.monitor",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.monitor_network_security_groups.azurerm_network_security_group.nsg",
            "module.monitor_network_security_groups.azurerm_network_security_rule.rules",
            "module.monitor_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.monitor_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.monitor_route_tables.azurerm_route.routes",
            "module.monitor_route_tables.azurerm_route_table.rt",
            "module.monitor_virtual_network.azurerm_subnet.subnets",
            "module.monitor_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.monitor_virtual_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "21c2d64f-041b-4fe3-b261-5d9d8733c630",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet",
            "location": "westeurope",
            "name": "dtf-monitor-vnet",
            "resource_group_name": "dtf-monitor-spoke",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/subnets/MonitorSubnet",
                "name": "MonitorSubnet",
                "security_group": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/networkSecurityGroups/monitor-MonitorSubnet-nsg"
              }
            ],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:25.1810463Z",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.monitor"
          ]
        }
      ]
    },
    {
      "module": "module.monitor_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nics",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/networkInterfaces/dtf-monitor-vm-nic",
            "ip_configuration": [
              {
                "name": "default",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Network/virtualNetworks/dtf-monitor-vnet/subnets/MonitorSubnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-86-05-22",
            "name": "dtf-monitor-vm-nic",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "dtf-monitor-spoke",
            "tags": {
              "CreationDateTime": "2023-07-23T11:36:10.7198786Z",
              "Environment": "Dev"
            },
            "virtual_machine_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-monitor-spoke/providers/Microsoft.Compute/virtualMachines/dtf-monitor-vm"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.monitor",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.monitor_network_security_groups.azurerm_network_security_group.nsg",
            "module.monitor_network_security_groups.azurerm_network_security_rule.rules",
            "module.monitor_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.monitor_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.monitor_route_tables.azurerm_route.routes",
            "module.monitor_route_tables.azurerm_route_table.rt",
            "module.monitor_virtual_network.azurerm_subnet.subnets",
            "module.monitor_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.work_network_security_groups[\"work-AKSSubnet-nsg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-AKSSubnet-nsg",
            "location": "westeurope",
            "name": "work-AKSSubnet-nsg",
            "resource_group_name": "dtf-work-spoke",
            "security_rule": [],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:22.7389433Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work"
          ]
        }
      ]
    },
    {
      "module": "module.work_network_security_groups[\"work-StorageSubnet-nsg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-StorageSubnet-nsg",
            "location": "westeurope",
            "name": "work-StorageSubnet-nsg",
            "resource_group_name": "dtf-work-spoke",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-work-subnet",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "10.1.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-everything",
                "priority": 300,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:24.3549592Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work"
          ]
        }
      ]
    },
    {
      "module": "module.work_network_security_groups[\"work-StorageSubnet-nsg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "allow-work-subnet",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-StorageSubnet-nsg/securityRules/allow-work-subnet",
            "name": "allow-work-subnet",
            "network_security_group_name": "work-StorageSubnet-nsg",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "dtf-work-spoke",
            "source_address_prefix": "10.1.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work",
            "module.work_network_security_groups.azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": "deny-everything",
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-StorageSubnet-nsg/securityRules/deny-everything",
            "name": "deny-everything",
            "network_security_group_name": "work-StorageSubnet-nsg",
            "priority": 300,
            "protocol": "*",
            "resource_group_name": "dtf-work-spoke",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work",
            "module.work_network_security_groups.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.work_network_security_groups[\"work-WorkSubnet-nsg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-WorkSubnet-nsg",
            "location": "westeurope",
            "name": "work-WorkSubnet-nsg",
            "resource_group_name": "dtf-work-spoke",
            "security_rule": [],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:22.7960686Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work"
          ]
        }
      ]
    },
    {
      "module": "module.work_route_tables[\"work-rt\"]",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub-vnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt/routes/hub-vnet",
            "name": "hub-vnet",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-work-spoke",
            "route_table_name": "work-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work",
            "module.work_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "monitor-vnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt/routes/monitor-vnet",
            "name": "monitor-vnet",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-work-spoke",
            "route_table_name": "work-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work",
            "module.work_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "outbound",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt/routes/outbound",
            "name": "outbound",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-work-spoke",
            "route_table_name": "work-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work",
            "module.work_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "vpn-address-pool-1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.0.0.0/17",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt/routes/vpn-address-pool-1",
            "name": "vpn-address-pool-1",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-work-spoke",
            "route_table_name": "work-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work",
            "module.work_route_tables.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "vpn-address-pool-2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.0.128.0/17",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt/routes/vpn-address-pool-2",
            "name": "vpn-address-pool-2",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-work-spoke",
            "route_table_name": "work-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work",
            "module.work_route_tables.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.work_route_tables[\"work-rt\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt",
            "location": "westeurope",
            "name": "work-rt",
            "resource_group_name": "dtf-work-spoke",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "outbound",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.0.0/16",
                "name": "hub-vnet",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "monitor-vnet",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.0.0.0/17",
                "name": "vpn-address-pool-1",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.0.128.0/17",
                "name": "vpn-address-pool-2",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/AKSSubnet",
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/StorageSubnet",
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/WorkSubnet"
            ],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:26.0202723Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.work"
          ]
        }
      ]
    },
    {
      "module": "module.work_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AKSSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/AKSSubnet",
            "name": "AKSSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-work-spoke",
            "virtual_network_name": "dtf-work-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "StorageSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/StorageSubnet",
            "name": "StorageSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-work-spoke",
            "virtual_network_name": "dtf-work-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "WorkSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/WorkSubnet",
            "name": "WorkSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-work-spoke",
            "virtual_network_name": "dtf-work-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.work_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AKSSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/AKSSubnet",
            "network_security_group_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-AKSSubnet-nsg",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/AKSSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "StorageSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/StorageSubnet",
            "network_security_group_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-StorageSubnet-nsg",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/StorageSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "WorkSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/WorkSubnet",
            "network_security_group_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-WorkSubnet-nsg",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/WorkSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.work_virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AKSSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/AKSSubnet",
            "route_table_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/AKSSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "StorageSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/StorageSubnet",
            "route_table_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/StorageSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "WorkSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/WorkSubnet",
            "route_table_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/routeTables/work-rt",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/WorkSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.work_virtual_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d0eff54c-5fed-44ab-9dad-abd8aa087754",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet",
            "location": "westeurope",
            "name": "dtf-work-vnet",
            "resource_group_name": "dtf-work-spoke",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/WorkSubnet",
                "name": "WorkSubnet",
                "security_group": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-WorkSubnet-nsg"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/StorageSubnet",
                "name": "StorageSubnet",
                "security_group": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-StorageSubnet-nsg"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/AKSSubnet",
                "name": "AKSSubnet",
                "security_group": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkSecurityGroups/work-AKSSubnet-nsg"
              }
            ],
            "tags": {
              "CreationDateTime": "2023-07-20T07:36:24.8320175Z",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.work"
          ]
        }
      ]
    },
    {
      "module": "module.work_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nics",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/networkInterfaces/dtf-work-vm-nic",
            "ip_configuration": [
              {
                "name": "default",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Network/virtualNetworks/dtf-work-vnet/subnets/WorkSubnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-22-B6-1E",
            "name": "dtf-work-vm-nic",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "dtf-work-spoke",
            "tags": {
              "CreationDateTime": "2023-07-23T11:06:23.6752610Z",
              "Environment": "Dev"
            },
            "virtual_machine_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-work-spoke/providers/Microsoft.Compute/virtualMachines/dtf-work-vm"
          },
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_resource_group.work",
            "module.hub_log_analytics.azurerm_log_analytics_workspace.log_analytics",
            "module.work_network_security_groups.azurerm_network_security_group.nsg",
            "module.work_network_security_groups.azurerm_network_security_rule.rules",
            "module.work_network_security_groups.module.nsg_diagnostics.azurerm_monitor_diagnostic_setting.diagnostics",
            "module.work_network_security_groups.module.nsg_diagnostics.data.azurerm_monitor_diagnostic_categories.categories",
            "module.work_route_tables.azurerm_route.routes",
            "module.work_route_tables.azurerm_route_table.rt",
            "module.work_virtual_network.azurerm_subnet.subnets",
            "module.work_virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}